crates/submilli-engine/src/snapshots/submilli_engine__parser__tests__snapshot_function_with_while.snap
---
source: crates/submilli-engine/src/parser.rs
expression: ast
---
Ast {
    exprs: [
        Expr {
            kind: Identifier(
                Ident {
                    name: "n",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 42,
                        end: 43,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 42,
                end: 43,
            },
        },
        Expr {
            kind: Number(
                0.0,
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 46,
                end: 47,
            },
        },
        Expr {
            kind: Binary {
                op: Gt,
                lhs: ExprId(
                    0,
                ),
                rhs: ExprId(
                    1,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 42,
                end: 47,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "log",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 55,
                        end: 58,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 55,
                end: 58,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "n",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 59,
                        end: 60,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 59,
                end: 60,
            },
        },
        Expr {
            kind: Call {
                callee: ExprId(
                    3,
                ),
                type_args: None,
                args: [
                    ExprId(
                        4,
                    ),
                ],
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 55,
                end: 61,
            },
        },
    ],
    stmts: [
        Stmt {
            kind: Expr(
                ExprId(
                    5,
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 55,
                end: 62,
            },
        },
        Stmt {
            kind: Block(
                [
                    StmtId(
                        0,
                    ),
                ],
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 49,
                end: 66,
            },
        },
        Stmt {
            kind: While {
                condition: ExprId(
                    2,
                ),
                body: StmtId(
                    1,
                ),
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 35,
                end: 66,
            },
        },
        Stmt {
            kind: Block(
                [
                    StmtId(
                        2,
                    ),
                ],
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 31,
                end: 68,
            },
        },
        Stmt {
            kind: Function {
                name: Ident {
                    name: "loop",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 9,
                        end: 13,
                    },
                },
                generics: [],
                params: [
                    ParamDecl {
                        name: Ident {
                            name: "n",
                            span: Span {
                                file: FileId(
                                    0,
                                ),
                                start: 14,
                                end: 15,
                            },
                        },
                        ty: Some(
                            TypeAnnotation {
                                kind: Name {
                                    name: Ident {
                                        name: "number",
                                        span: Span {
                                            file: FileId(
                                                0,
                                            ),
                                            start: 17,
                                            end: 23,
                                        },
                                    },
                                    args: [],
                                },
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 17,
                                    end: 23,
                                },
                            },
                        ),
                        default: None,
                        optional: false,
                        pattern: None,
                        rest: false,
                        modifiers: None,
                    },
                ],
                return_type: Some(
                    TypeAnnotation {
                        kind: Name {
                            name: Ident {
                                name: "void",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 26,
                                    end: 30,
                                },
                            },
                            args: [],
                        },
                        span: Span {
                            file: FileId(
                                0,
                            ),
                            start: 26,
                            end: 30,
                        },
                    },
                ),
                type_predicate: None,
                body: StmtId(
                    3,
                ),
                doc: None,
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 68,
            },
        },
    ],
    top_level: [
        StmtId(
            4,
        ),
    ],
    pattern_origins: {},
    tuple_pattern_sources: {},
    parameter_bindings: {},
    for_of_pattern_bindings: {},
    for_pattern_init_bindings: {},
    exported_decls: [],
    implicit_initializers: {},
    synthetic_undefined: {},
    binding_defaults: {},
}
